--- a/lottery.html
+++ b/lottery.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>Photo Lottery Example</title>
 <link rel="stylesheet" type="text/css" href="res/lottery.css" />
 </head>
