--- a/lottery_phone.html
+++ b/lottery_phone.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
 <title>Photo Lottery Example</title>
 <link rel="stylesheet" type="text/css" href="res/lottery.css" />
+<link rel="stylesheet" type="text/css" href="res/fireworks.css" />
+<style>.stop .snow{visibility: hidden;}</style>
 </head>
-<body class="byphone">
+<body class="byphone stop">
 
 <div id="wrapper">
     <div id="lottery">
@@ -26,6 +28,7 @@
 </div>
 
 <script type="text/javascript" src="res/jquery-1.9.0.min.js"></script>
+<script type="text/javascript" src="res/snowstorm.js"></script>
 <script type="text/javascript" src="res/lottery_phone.js"></script>
 
 
